[gd_scene load_steps=2 format=3 uid="uid://cit0pky5b44ly"]

[ext_resource type="Script" uid="uid://btve56qlssfts" path="res://boss_ui.gd" id="1_f5yoo"]

[node name="BossUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f5yoo")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="BoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Select Enemy"

[node name="HBoxContainer" type="HBoxContainer" parent="BoxContainer/VBoxContainer"]
layout_mode = 2

[node name="BossDD" type="ItemList" parent="BoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
item_count = 2
item_0/text = "Jeff"
item_1/text = "placeholder"

[node name="ConfirmPB" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 59.0
offset_right = 305.0
offset_bottom = 96.0
text = "Confirm"

[connection signal="item_selected" from="BoxContainer/VBoxContainer/HBoxContainer/BossDD" to="." method="_on_boss_dd_item_selected"]
[connection signal="pressed" from="ConfirmPB" to="." method="_on_confirm_pb_pressed"]
